# geo-data-processing

./: .gitignore  README.md
jupyter/: reformat.ipynb  show_data.ipynb
processing-with-S2Geometry/: .gitignore  CMakeLists.txt  README.md  processing_with_s2_only.cpp  s2-only.cpp
processing-with-S2Geometry/jupyter/: reformat.ipynb
processing-with-trees/: CMakeLists.txt  README.md  processing-with-trees.cpp
processing-with-trees/interval_tree/: itree.h
